--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "An API Rest to handle pokemons",
   "main": "app.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
+    "start": "node app.js",
     "dev": "NODE_ENV=development nodemon app.js"
     
   },
