--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "./app.js"
+            "source": "./app.js",
+            "destination": "/"
         }
     ]
 }
