--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "description": "An API Rest to handle pokemons",
   "main": "app.js",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
-    "start": "node app.js",
+    "start": "NODE_ENV=production node app.js",
     "dev": "NODE_ENV=development nodemon app.js"
     
   },
