--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development nodemon app.js"
-    
+    "dev": "NODE_ENV=development nodemon app.js",
+    "build": "netlify deploy --prod"
   },
   "author": "Bamishola",
   "license": "ISC",
@@ -16,8 +16,12 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
+    "netlify-cli": "^17.34.0",
+    "netlify-lambda": "^2.0.16",
+    "postgresql": "^0.0.1",
     "sequelize": "^6.37.3",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
