--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development nodemon app.js",
-    "build": "netlify deploy --prod"
+    "dev": "NODE_ENV=development nodemon app.js"
   },
   "author": "Bamishola",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
